--- a/part2/cursor-spiral.html
+++ b/part2/cursor-spiral.html
@@ -18,6 +18,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="  crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/16.7.3/jcanvas.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="spiral.js"></script>
+	<script type="text/javascript" src="analysis.js"></script>
 	<script type="text/javascript" src="canvas.js"></script>
 
 	</body>
