updated html and css for part 2

--- a/part2/cursor-spiral.html
+++ b/part2/cursor-spiral.html
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
+<!-- 
+	Leap Tracer: Part 2 Tutorial 
+	Tutorial developed by George Marzloff (george@marzloffmedia.com)
+-->
+
+<!-- These are comments in HTML files and are ignored by the browser --> 
+
+<!DOCTYPE html> <!-- tells the browser this document is html -->
+<html>
 	<head>
-		<title>LeapTracer - Experiment in Finger Tracking</title>
+		<title>LeapTracer - Spiral Test</title>
 		<link href="style.css" rel="stylesheet" type='text/css' />
 	</head>
 
 	<body>
 
 		<h1 id="pageTitle">LeapTracer -  Spiral Test</h1>
-		<h3 class="subhead">Beginner Tutorial for using LeapMotion in Clinical Experiments</h3>
+		<h2 class="subhead">Beginner Tutorial for using LeapMotion in Clinical Experiments</h2>
 
-		<canvas id="tracerCanvas" width="800" height="400">
-			<p>Sorry, your browser does not support HTML canvas.</p>
-		</canvas>
+		<canvas id="tracerCanvas" width="800" height="400"></canvas>
 
-		<h2 id="results"></h2>
+		<h3 id="results"></h3>
 
+	<!-- The browser retrieves javascript files from these URLs and will use this to control the HTML and CSS --> 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="  crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/16.7.3/jcanvas.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="spiral.js"></script>
