--- a/part3/leap-spiral.html
+++ b/part3/leap-spiral.html
@@ -1,6 +1,12 @@
+<!-- 
+	Leap Tracer: Part 2 Tutorial 
+	Tutorial developed by George Marzloff (george@marzloffmedia.com)
+-->
+
 <!DOCTYPE html>
+<html>
 	<head>
-		<title>LeapTracer - Experiment in Finger Tracking</title>
+		<title>LeapTracer - Part 3 Leap Control</title>
 		<link href="style.css" rel="stylesheet" type='text/css' />
 	</head>
 
@@ -9,11 +15,9 @@
 		<h1 id="pageTitle">LeapTracer -  Part 3 Leap Test</h1>
 		<h3 class="subhead">Beginner Tutorial for using LeapMotion in Clinical Experiments</h3>
 
-		<canvas id="tracerCanvas" width="800" height="400">
-			<p>Sorry, your browser does not support HTML canvas.</p>
-		</canvas>
+		<canvas id="tracerCanvas" width="800" height="400"></canvas>
 
-		<h2 id="results"></h2>
+		<h3 id="results"></h3>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="  crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/16.7.3/jcanvas.min.js" type="text/javascript"></script>
